--- a/style.css
+++ b/style.css
@@ -234,3 +234,12 @@ h6{
   font-weight: lighter;
   padding: 0 20px;
 }
+.user{
+  top: 0;
+  right: 0;
+  padding: 20px
+}
+.user i{
+  padding: 10px;
+  font-size: 25px
+}
