--- a/style.css
+++ b/style.css
@@ -199,7 +199,7 @@ body .options .option .label .info .sub {
 .info, .icon{
   transform: translateY(-300px) !important;
 }
-p{
+.option p{
   display: none;
   color: #fff;
   padding: 10px;
@@ -226,7 +226,7 @@ h1,h6,h3{
   text-align:center;
 }
 
-h3{
+.showcase h3{
   transform: translateY(10vh);
 
 }
@@ -248,4 +248,81 @@ h6{
   cursor: pointer;
   padding: 10px;
   font-size: 25px;
+}
+div.modal-content{
+  font-family: Arial;
+  font-size: 17px;
+  line-height: 1.6em;
+}
+.button0{
+  background-color: #00704a;
+  padding: 1em 2em;
+  color:#fff;
+  border:0;
+}
+.button0:hover{
+  background-color: #333;
+}
+/*POP UP NOTIFICATION*/
+.modal, .modalB,  .modalC, .modalD, .modalE{
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  overflow: auto;
+  background-color: rgba(0,0,0,0.5);
+}
+.modal-content{
+  background-color: #f4f4f4;
+  margin: 20% auto;
+  width: 70%;
+  box-shadow: 0 5px 8px 0 rgba(0,0,0,0.2), 0 7px 20px 0 rgba(0,0,0,0.17);
+  animation-name: modalopen;
+  animation-duration: 1s;
+}
+.modal-header h2, .modal-footer h3{
+  margin:0;
+}
+.modal-header{
+  background-color: #00704a;
+  padding: 15px;
+  color: #fff;
+}
+.modal-body{
+  padding: 10px 20px;
+}
+.modal-footer{
+  background-color: #00704a;
+  padding: 10px;
+  color: #fff;
+  text-align: center;
+}
+.closeBtn,.closeBtnB,.closeBtnC,.closeBtnD,.closeBtnE{
+  color: #fff;
+  float:right;
+  font-size: 30px;
+}
+.closeBtn:hover, .closeBtn:focus,.closeBtnB:hover, .closeBtnB:focus,.closeBtnC:hover, .closeBtnC:focus, .closeBtnD:hover, .closeBtnD:focus, .closeBtnE:hover, .closeBtnE:focus{
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.highlight{
+  fill:none;
+  stroke-width: 4;
+  stroke: #fff;
+}
+.highlight:hover {
+  stroke: black;
+}
+@keyframes modalopen {
+from{opacity: 0}
+to{opacity: 1}
+}
+.modal-body p{
+  display: block;
 }
